Update 'vzbdqeteh-go' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-3012e39780.u7ya.p3.openshiftapps.com/rhtap/rhtap-qe:8c32bc2b489a2d0bd3c5ddfb283f194f37f28459@sha256:f49318562e4419f7b5ebf361976b152ff7d8e315eb48d938ed040c766b2cde85

--- a/components/vzbdqeteh-go/overlays/development/deployment-patch.yaml
+++ b/components/vzbdqeteh-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: vzbdqeteh-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-3012e39780.u7ya.p3.openshiftapps.com/rhtap/rhtap-qe:8c32bc2b489a2d0bd3c5ddfb283f194f37f28459@sha256:f49318562e4419f7b5ebf361976b152ff7d8e315eb48d938ed040c766b2cde85
+          name: container-image
